--- a/docker-jupyter/Dockerfile
+++ b/docker-jupyter/Dockerfile
@@ -3,16 +3,14 @@ FROM ubuntu:latest
 LABEL maintainer "Pedro Hernandez <p.hernandezserrano@maastrichtuniversity.nl>"
 LABEL maintainer "Alexander Malic <alexander.malic@maastrichtuniverstity.nl>"
 
-#COPY docker-jupyter /root/docker-jupyter
-
 RUN apt-get update && \
     apt-get -y install wget python-pip python2.7 python-dev python-matplotlib libblas3 liblapack3 libstdc++6 python-setuptools && \
     apt-get clean && \
     pip install --upgrade pip && \
-    pip install seaborn && \
+    pip install -U seaborn scikit-learn && \
     pip install turicreate ipython "ipython[notebook]" jupyter
 
-#WORKDIR /root/docker-jupyter
+WORKDIR /root
 
 EXPOSE 8888
 
