--- a/docker-jupyter/Dockerfile
+++ b/docker-jupyter/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && \
     apt-get -y install wget python-pip python2.7 python-dev python-matplotlib libblas3 liblapack3 libstdc++6 python-setuptools && \
     apt-get clean && \
     pip install --upgrade pip && \
-    pip install -U seaborn scikit-learn && \
+    pip install -U seaborn scikit-learn psycopg2 && \
     pip install turicreate ipython "ipython[notebook]" jupyter
 
 WORKDIR /root
